--- a/quoteify.html
+++ b/quoteify.html
@@ -109,7 +109,7 @@
 
     // Show user greeting
     const userGreetingEl = document.getElementById('user-greeting');
-    userGreetingEl.textContent = `👋 Welcome, ${loggedUser}`;
+    userGreetingEl.textContent = ` Welcome, ${loggedUser}`;
 
     // Logout handler
     document.getElementById('logout-btn').addEventListener('click', () => {
