--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 <body>
   <div class="glass-card w-full max-w-md mx-auto p-8 rounded-2xl">
     <h1 class="text-3xl font-bold text-white text-center mb-6">Welcome Back</h1>
-    <p class="text-gray-300 text-center mb-8">Login to Quoteify and stay inspired ✨</p>
+    <p class="text-gray-300 text-center mb-8">Login to Quoteify and stay inspired </p>
 
     <form id="login-form" class="space-y-6">
       <div>
